openshift_exports/cluster_export/bbitai-dev-2026-03-20T15_31_03Z/bbitai-dev/NetworkPolicy_networking.k8s.io_v1_bbitai-dev_allow-from-dev-sandbox-managed-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    toolchain.dev.openshift.com/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"labels":{"toolchain.dev.openshift.com/provider":"codeready-toolchain","toolchain.dev.openshift.com/space":"bbitai"},"name":"allow-from-dev-sandbox-managed-ns","namespace":"bbitai-dev"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"dev-sandbox/policy-group":"ingress"}}}]}],"policyTypes":["Ingress"]}}'
  labels:
    toolchain.dev.openshift.com/provider: codeready-toolchain
    toolchain.dev.openshift.com/space: bbitai
  name: allow-from-dev-sandbox-managed-ns
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          dev-sandbox/policy-group: ingress
  podSelector: {}
  policyTypes:
  - Ingress
